# webapp_visualization

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  app.py  app_api.py  config.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
assets/: styles.css
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: data.py  filters.py
backend/app/core/: config.py  loader.py
backend/app/logic/: aggregations.py
backend/app/models/: responses.py
frontend/: .gitignore  index.html  nginx.conf  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: MarketBarChart.tsx  RamoDonutChart.tsx
frontend/src/components/filters/: FilterBar.tsx  TopNSelector.tsx  ViewModeToggle.tsx
frontend/src/components/kpis/: KPICard.tsx  KPIRow.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  toggle-group.tsx
frontend/src/hooks/: useCompanyRanking.ts  useDistribution.ts  useFilters.ts  useKPIs.ts
frontend/src/lib/: constants.ts  utils.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts
src/: __init__.py
src/components/: __init__.py  charts.py  filters.py  kpi_cards.py
src/data/: loader.py
src/layouts/: __init__.py  market_overview.py
src/logic/: __init__.py  aggregations.py  rankings.py  ratios.py
